<resources>
    <string name="app_name">EventWise</string>
    <string name="decline_invitation">Decline invitation</string>
    <string name="decline_confirm_title">Decline this invitation?</string>
    <string name="decline_confirm_msg">This action cannot be undone.</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="msg_declined_done">You have declined this invitation.</string>
    <string name="msg_unavailable">Invitation no longer available.</string>
    <string name="msg_unable_decline">Unable to decline. Please try again.</string>
    <string name="action_retry">Retry</string>

    <string name="delete_my_profile">Delete my information</string>
    <string name="delete_confirm_title">Confirm deletion</string>
    <string name="delete_confirm_message">Once deleted, it cannot be recovered; your history and personal data will be permanently removed. Are you sure you want to continue?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_success">Deleted. Looking forward to seeing you again!</string>
    <string name="delete_failed">Deletion failed, please try again later.</string>
    <string name="session_expired">Your session has expired. Please log in again.</string>

    <string name="your_events">Your Events</string>
    <string name="organization_name">Organization Name</string>
    <string name="view_entrants">View Entrants</string>
    <string name="edit">Edit</string>

    <string name="cd_back_button">Back button</string>
    <string name="cd_event_poster">Event poster</string>
    <string name="cd_qr_code">QR code</string>

    <string name="event_open">EVENT OPEN</string>
    <string name="event_closed">EVENT CLOSED</string>

    <string name="event_hosted_by">Event Hosted By:</string>
    <string name="event">Event:</string>
    <string name="lottery_close">Lottery Close:</string>
    <string name="registration_close">Registration Close:</string>
    <string name="location_label">Location:</string>
    <string name="criteria_guidelines">Criteria / Guidelines:</string>

    <string name="click_images_expanded">click images to view expanded</string>

    <string name="event_spots_format">•  %d event spots</string>
    <string name="waitlist_format">•  %d on the wait list</string>
    <string name="registered_format">•  %d registered</string>
    <string name="time_range_format" formatted="false">%s – %s</string>

    <string name="my_events">My Events</string>
    <string name="events_community">Events Community</string>
    <string name="join">Join</string>
    <string name="criteria_here">Criteria here</string>
    <string name="event_poster_hint">Event Poster\nHere If Exists</string>
    <string name="cd_counts_icon">Counts icon</string>


    <string name="empty_list_message">Nothing to see here.</string>
    <string name="comments">Comments</string>
    <string name="post_comment">Post comment</string>
    <string name="leave_a_comment">Leave a comment...</string>
    <string name="dismiss">Dismiss</string>

    <string name="notice">NOTICE</string>
    <string name="action_required">ACTION REQUIRED</string>

</resources>